# mangos-tbc

./: meson.build  meson_options.txt
contrib/extractor/: meson.build
contrib/mmap/: meson.build
contrib/vmap_assembler/: meson.build
contrib/vmap_extractor/vmapextract/: meson.build
dep/libmpq/: meson.build
dep/recastnavigation/Detour/: meson.build
dep/src/bzip2/: meson.build
dep/src/utf8cpp/: meson.build
src/framework/: meson.build
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  Lock.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h
src/game/: meson.build  pchdef.h
src/game/AI/: CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/game/Addons/: AddonHandler.cpp  AddonHandler.h
src/game/Anticheat/: Anticheat.cpp
src/game/Arena/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp
src/game/AuctionHouse/: AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h
src/game/Chat/: Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  Chat.cpp  Chat.h  ChatHandler.cpp  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  NpcCommands.cpp  PetCommands.cpp  TicketCommands.cpp  debugcmds.cpp
src/game/Cinematics/: CinematicMgr.cpp  CinematicMgr.h  M2Stores.cpp  M2Stores.h  M2Structure.h
src/game/Combat/: CombatHandler.cpp  CombatManager.cpp  CombatManager.h  DuelHandler.cpp  HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h
src/game/DBScripts/: ScriptMgr.cpp  ScriptMgr.h
src/game/Entities/: Bag.cpp  Bag.h  Camera.cpp  Camera.h  CharacterHandler.cpp  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureLinkingMgr.cpp  CreatureLinkingMgr.h  CreatureSpellList.h  DynamicObject.cpp  DynamicObject.h  EntitiesMgr.cpp  EntitiesMgr.h  GameObject.cpp  GameObject.h  GossipDef.cpp  GossipDef.h  Item.cpp  Item.h  ItemEnchantmentMgr.cpp  ItemEnchantmentMgr.h  ItemHandler.cpp  ItemPrototype.h  MiscHandler.cpp  NPCHandler.cpp  NPCHandler.h  Object.cpp  Object.h  ObjectDefines.h  ObjectGuid.cpp  ObjectGuid.h  ObjectVisibility.cpp  ObjectVisibility.h  Pet.cpp  Pet.h  PetHandler.cpp  PetitionsHandler.cpp  (+24 more)
src/game/GMTickets/: GMTicketHandler.cpp  GMTicketMgr.cpp  GMTicketMgr.h
src/game/GameEvents/: GameEventMgr.cpp  GameEventMgr.h  moon.cpp  moon.h
src/game/Globals/: Conditions.cpp  Conditions.h  GraveyardManager.cpp  GraveyardManager.h  Locales.cpp  Locales.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  SharedDefines.h
src/game/Grids/: Cell.h  CellImpl.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  GridStates.cpp  GridStates.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/game/Groups/: Group.cpp  Group.h  GroupHandler.cpp  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/game/Guilds/: Guild.cpp  Guild.h  GuildHandler.cpp  GuildMgr.cpp  GuildMgr.h
src/game/LFG/: LFGHandler.cpp
src/game/Loot/: LootHandler.cpp  LootMgr.cpp  LootMgr.h
src/game/Mails/: Mail.cpp  Mail.h  MailHandler.cpp  MassMailMgr.cpp  MassMailMgr.h
src/game/Maps/: GridDefines.h  GridMap.cpp  GridMap.h  GridMapDefines.h  InstanceData.cpp  InstanceData.h  Map.cpp  Map.h  MapDataContainer.cpp  MapDataContainer.h  MapManager.cpp  MapManager.h  MapPersistentStateMgr.cpp  MapPersistentStateMgr.h  MapRefManager.h  MapReference.h  MapUpdater.cpp  MapUpdater.h  MapWorkers.h  ObjectPosSelector.cpp  ObjectPosSelector.h  SpawnGroup.cpp  SpawnGroup.h  SpawnGroupDefines.h  SpawnManager.cpp  SpawnManager.h  TaxiHandler.cpp  TransportMgr.cpp  TransportMgr.h  TransportSystem.cpp  TransportSystem.h
src/game/MotionGenerators/: FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  MotionMaster.cpp  MotionMaster.h  MoveMap.cpp  MoveMap.h  MoveMapSharedDefines.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  MovementHandler.cpp  Path.h  PathFinder.cpp  PathFinder.h  PathMovementGenerator.cpp  PathMovementGenerator.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointManager.cpp  WaypointManager.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h  WrapperMovementGenerator.cpp  WrapperMovementGenerator.h
src/mangosd/: CliRunnable.cpp  CliRunnable.h  MaNGOSsoap.cpp  MaNGOSsoap.h  Main.cpp  Master.cpp  Master.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  meson.build  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h
src/realmd/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  Main.cpp  RealmList.cpp  RealmList.h  meson.build
src/shared/: ByteBuffer.cpp  ByteBuffer.h  Common.cpp  Common.h  CommonDefines.h  Errors.h  Filesystem.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProducerConsumerQueue.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h  TSS.h  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h  WorldPacket.h  meson.build  pchdef.h  revision_sql.h
(+681 files in other folders)
